[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/skull_icon.png" type="Texture" id=1]
[ext_resource path="res://Particles_playground/Skull_Portal.gd" type="Script" id=2]
[ext_resource path="res://Particles_playground/Fire_effect.tscn" type="PackedScene" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 30, 24 )

[node name="Skull_Portal" type="Area2D"]
collision_layer = 64
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Fire_effect_01_v2" parent="." instance=ExtResource( 4 )]

[connection signal="body_entered" from="." to="." method="_on_Skull_Portal_body_entered"]
[connection signal="from_parent_to_particle_should_emitting_signal" from="." to="Fire_effect_01_v2" method="_on_Skull_Portal_from_parent_to_particle_should_emitting_signal"]
